cargo-features = ["strip"]

[package]
name = "gateway-rs"
version = "0.1.1-alpha.14"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "helium_gateway"
path = "src/main.rs"
doc = false

[workspace]
members = ["lorawan"]


[dependencies]
structopt = "0.3"
semver = "0.11"
config = {version="0.10", default-features=false, features=["toml"]}
serde = "1"
serde_json = "1"
tokio = { version = "0.2", default-features=false, features=["macros", "signal", "rt-threaded", "process"] }
futures = "*"
triggered = "0.1"
slog = "2.7"
slog-async = "2.5"
slog-term = "2.6"
slog-syslog = "0.12"
slog-scope = "4.3"
thiserror = "1.0"
bs58 = {version = "0.4", features=["check"]}
base64 = "0"
ed25519-dalek = "1.0"
rand = "0.7"
prost = "0.6"
daemonize = "0.4"
tonic = "*"
http = "*"
log = "0.4"
bytes = "*"
xxhash-c = "0.8"
lorawan = { package = "lorawan", path = "lorawan" }
semtech-udp = { version = "0.4.1", features=["server"] }
helium-proto = { git = "https://github.com/helium/proto", branch="master", features=["services"]}
xorf = { git = "https://github.com/helium/xorf", branch = "madninja/public_fields" }
longfi = { git = "https://github.com/helium/longfi-rs", branch = "main" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
#debug = true
#strip = "debuginfo"
strip = "symbols"

